--- a/css/styles.css
+++ b/css/styles.css
@@ -1094,7 +1094,7 @@ h2 {
     }
 
     .index-cta .button {
-        width: 100%;
+        width: fit-content;
         max-width: 400px;
     }
 }
